AUTOMAKE_OPTIONS = foreign
SUBDIRS = gulcalc getmodel eve cdftocsv gultocsv fmcalc fmtocsv randtocsv evetocsv evetobin randtobin damagebintobin damagebintocsv fmxreftocsv fmxreftobin fmprofiletocsv fmpolicytctocsv  fmpolicytctobin fmprofiletobin fmprogrammetobin fmprogrammetocsv gultobin itemtobin itemtocsv coveragetobin coveragetocsv summarycalc gulsummaryxreftobin gulsummaryxreftocsv eltcalc pltcalc summarycalctocsv occurrencetobin occurrencetocsv fmsummaryxreftobin fmsummaryxreftocsv  fmxreftobin fmxreftocsv leccalc ordleccalc aalcalc aalcalctocsv vulnerabilitytobin vulnerabilitytocsv footprinttobin footprinttocsv returnperiodtocsv returnperiodtobin kat footprintconv periodstobin periodstocsv fmprofilebinconv summarycalctobin kunit summaryindex validatedamagebin validatefootprint validatevulnerability crossvalidation validateoasisfiles ensembletobin ensembletocsv
#include_HEADERS = include/oasis.h

