AUTOMAKE_OPTIONS = foreign
SUBDIRS = gulcalc getmodel eve cdftocsv gultocsv fmcalc fmtocsv randtocsv evetocsv evetobin evedicttobin evedicttocsv randtobin damagebintobin damagebintocsv fmxreftocsv fmxreftobin fmprofiletocsv fmpolicytctocsv  fmpolicytctobin fmprofiletobin fmprogrammetobin fmprogrammetocsv gultobin itemtobin itemtocsv coveragetobin coveragetocsv summarycalc gulsummaryxreftobin gulsummaryxreftocsv eltcalc pltcalc summarycalctocsv occurrencetobin occurrencetocsv fmsummaryxreftobin fmsummaryxreftocsv  fmxreftobin fmxreftocsv leccalc ordleccalc aalcalc vulnerabilitytobin vulnerabilitytocsv footprinttobin footprinttocsv returnperiodtocsv returnperiodtobin kat katparquet footprintconv periodstobin periodstocsv fmprofilebinconv summarycalctobin summaryindex validatedamagebin validatefootprint validatevulnerability crossvalidation validateoasisfiles ensembletobin ensembletocsv quantiletobin quantiletocsv
#include_HEADERS = include/oasis.h

