AUTOMAKE_OPTIONS = foreign
SUBDIRS = gulcalc getmodel eve cdftocsv gultocsv fmcalc fmtocsv randtocsv evetocsv evetobin randtobin damagebintobin damagebintocsv fmxreftocsv fmxreftobin fmprofiletocsv fmpolicytctocsv  fmpolicytctobin fmprofiletobin fmprogrammetobin fmprogrammetocsv gultobin itemtobin itemtocsv coveragetobin coveragetocsv summarycalc gulsummaryxreftobin gulsummaryxreftocsv eltcalc pltcalc summarycalctocsv occurrencetobin occurrencetocsv fmsummaryxreftobin fmsummaryxreftocsv  fmxreftobin fmxreftocsv leccalc ordleccalc aalcalc aalcalcsimple vulnerabilitytobin vulnerabilitytocsv footprinttobin footprinttocsv returnperiodtocsv returnperiodtobin kat katparquet footprintconv periodstobin periodstocsv fmprofilebinconv summarycalctobin summaryindex validatedamagebin validatefootprint validatevulnerability crossvalidation validateoasisfiles ensembletobin ensembletocsv quantiletobin quantiletocsv placalc lossfactorstobin lossfactorstocsv amplificationstobin amplificationstocsv
#include_HEADERS = include/oasis.h

