[package]
name = "aalcalc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.26", features = ["derive"] }
glob = "0.3.0"


[dev-dependencies]
mockall = "0.11.3"
